test/Fail/Polarity-pragma-out-of-scope.agda


postulate
  F : Set → Set

module _ where

  {-# POLARITY F + #-}
